# projecteuler

./: .gitignore  ProjectEuler.hs  combinations.hs  isPrime-divisors.hs  primes.hs  problem007.hs  problem031.hs  problem051.hs  problem059.hs  problem061.hs  problem063.hs  problem065.hs  problem069.hs  problem071.hs  problem072.hs  problem076.hs  problem081.hs  problem089.hs  problem092.hs  problem1.hs  problem10.hs  problem100.hs  problem101.hs  problem102.hs  problem104.hs  problem112.hs  problem123.hs  problem124.hs  problem203.hs  problem22.hs  problem3.hs  problem301.hs  problem35.hs  problem381.hs  problem384.hs  problem385.hs  problem387.hs  problem388.hs  problem42-a.hs  problem42.hs  (+10 more)
cpp/: problem001.cpp  problem002.cpp  problem003.cpp  problem006.cpp  problem007.cpp  problem010.cpp
hs/: ProjectEuler.hs  build.sh  problem003.hs  problem007.hs  problem010.hs  problem022.hs  problem031.hs  problem035.hs  problem042.hs  problem047.hs  problem048.hs  problem054.hs  problem059.hs  problem061.hs  problem063.hs  problem071.hs  problem081.hs  problem089.hs  problem095.hs  problem101.hs  problem102.hs  problem112.hs  problem123.hs  problem203.hs  problem381.hs
input/: matrix2.txt
old/: problem1.hs  problem387.hs  problem42.hs  problem57.hs  problem61.hs  problem97.hs
python/: problem007.py  problem060.py  problem62.py  project_euler.py  pyproject.toml
