[tool.poetry]
name = "project-euler"
version = "0.1.0"
description = ""
authors = ["Code-Apprentice <codeguru42@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
